--- a/starrylogin.html
+++ b/starrylogin.html
@@ -4,24 +4,21 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Thank You - Internship Finder</title>
-
-  <!-- ✨ Google Font: Montserrat -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
   <style>
-    /* -------- STAR BACKGROUND STYLING -------- */
+    /* ---------- STAR BACKGROUND ---------- */
     body {
       width: 100%;
       height: 100vh;
       background-color: #000;
-      background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.15), transparent),
-        radial-gradient(circle at 20% 80%, rgba(41, 196, 255, 0.15), transparent);
+      background-image: radial-gradient(circle at top right, rgba(121, 68, 154, 0.13), transparent),
+        radial-gradient(circle at 20% 80%, rgba(41, 196, 255, 0.13), transparent);
       overflow: hidden;
       margin: 0;
       padding: 0;
       font-family: "Montserrat", sans-serif;
       color: white;
-      letter-spacing: 0.5px;
     }
 
     canvas {
@@ -33,7 +30,7 @@
       z-index: 0;
     }
 
-    /* -------- THANK YOU CONTENT -------- */
+    /* ---------- MAIN CONTAINER ---------- */
     .container {
       position: relative;
       z-index: 1;
@@ -51,9 +48,9 @@
     }
 
     h1 {
-      font-size: 2.8rem;
-      margin-bottom: 20px;
+      font-size: 2.5rem;
       font-weight: 700;
+      margin-bottom: 20px;
       background: linear-gradient(135deg, #7b2ff7, #f107a3);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
@@ -61,16 +58,35 @@
 
     p {
       font-size: 1.2rem;
-      margin-bottom: 45px;
-      color: rgba(255, 255, 255, 0.85);
-      font-weight: 500;
+      color: rgba(255,255,255,0.85);
+      margin-bottom: 30px;
     }
 
+    /* ---------- INPUT BOXES ---------- */
+    input {
+      width: 80%;
+      padding: 12px;
+      margin: 10px 0;
+      border: none;
+      border-radius: 25px;
+      text-align: center;
+      background: rgba(255, 255, 255, 0.1);
+      color: white;
+      font-size: 1rem;
+      outline: none;
+    }
+
+    input::placeholder {
+      color: rgba(255,255,255,0.7);
+    }
+
+    /* ---------- BUTTONS ---------- */
     .buttons {
       display: flex;
       justify-content: center;
-      gap: 25px;
       flex-wrap: wrap;
+      gap: 20px;
+      margin-top: 30px;
     }
 
     .btn {
@@ -79,7 +95,6 @@
       padding: 14px 35px;
       border-radius: 35px;
       font-weight: 600;
-      letter-spacing: 0.8px;
       transition: all 0.3s ease;
       font-size: 1rem;
     }
@@ -94,46 +109,33 @@
 
     .btn:hover {
       transform: translateY(-3px) scale(1.05);
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.3);
+      box-shadow: 0 0 20px rgba(255,255,255,0.3);
     }
 
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-60px); }
       to { opacity: 1; transform: translateY(-50%); }
     }
-
-    a.credit {
-      position: absolute;
-      bottom: 2vmin;
-      right: 2vmin;
-      color: rgba(255,255,255,0.2);
-      text-decoration: none;
-      z-index: 2;
-      font-size: 0.8rem;
-    }
-    a.credit:hover { color: #fff; }
   </style>
 </head>
-
 <body>
-  <!-- Canvas for animated star background -->
   <canvas></canvas>
 
-  <!-- Thank You message -->
   <div class="container">
-    <h1>Thank You for Signing Up! 🌟</h1>
-    <p>We’re thrilled to have you onboard. Start exploring internships that match your passion and skills!</p>
+    <h1>Welcome Back 🌟</h1>
+    <p>Please enter your username and password to continue.</p>
+
+    <input type="text" placeholder="Enter your username" />
+    <input type="password" placeholder="Enter your password" />
+
     <div class="buttons">
-      <a href="starrylogin.html" class="btn primary">Go to Login</a>
+      <a href="#" class="btn primary">Sign In</a>
       <a href="index.html" class="btn secondary">Back to Home</a>
     </div>
   </div>
 
-  <!-- optional footer credit -->
-  <a class="credit" href="#">© Internship Finder</a>
-
+  <!-- ---------- STAR BACKGROUND SCRIPT ---------- -->
   <script>
-    /* -------- STAR ANIMATION SCRIPT -------- */
     const STAR_COLOR = '#fff';
     const STAR_SIZE = 3;
     const STAR_MIN_SCALE = 0.2;
@@ -162,8 +164,7 @@
     function generate() {
       for (let i = 0; i < STAR_COUNT; i++) {
         stars.push({
-          x: 0,
-          y: 0,
+          x: 0, y: 0,
           z: STAR_MIN_SCALE + Math.random() * (1 - STAR_MIN_SCALE)
         });
       }
@@ -176,35 +177,26 @@
 
     function recycleStar(star) {
       let direction = 'z';
-      let vx = Math.abs(velocity.x),
-          vy = Math.abs(velocity.y);
-
+      let vx = Math.abs(velocity.x), vy = Math.abs(velocity.y);
       if (vx > 1 || vy > 1) {
-        let axis = vx > vy
-          ? (Math.random() < vx / (vx + vy) ? 'h' : 'v')
-          : (Math.random() < vy / (vx + vy) ? 'v' : 'h');
+        let axis = vx > vy ? (Math.random() < vx / (vx + vy) ? 'h' : 'v') : (Math.random() < vy / (vx + vy) ? 'v' : 'h');
         if (axis === 'h') direction = velocity.x > 0 ? 'l' : 'r';
         else direction = velocity.y > 0 ? 't' : 'b';
       }
 
       star.z = STAR_MIN_SCALE + Math.random() * (1 - STAR_MIN_SCALE);
-
       if (direction === 'z') {
         star.z = 0.1;
         star.x = Math.random() * width;
         star.y = Math.random() * height;
       } else if (direction === 'l') {
-        star.x = -OVERFLOW_THRESHOLD;
-        star.y = height * Math.random();
+        star.x = -OVERFLOW_THRESHOLD; star.y = height * Math.random();
       } else if (direction === 'r') {
-        star.x = width + OVERFLOW_THRESHOLD;
-        star.y = height * Math.random();
+        star.x = width + OVERFLOW_THRESHOLD; star.y = height * Math.random();
       } else if (direction === 't') {
-        star.x = width * Math.random();
-        star.y = -OVERFLOW_THRESHOLD;
+        star.x = width * Math.random(); star.y = -OVERFLOW_THRESHOLD;
       } else if (direction === 'b') {
-        star.x = width * Math.random();
-        star.y = height + OVERFLOW_THRESHOLD;
+        star.x = width * Math.random(); star.y = height + OVERFLOW_THRESHOLD;
       }
     }
 
@@ -219,14 +211,12 @@
 
     function step() {
       context.clearRect(0, 0, width, height);
-      update();
-      render();
+      update(); render();
       requestAnimationFrame(step);
     }
 
     function update() {
-      velocity.tx *= 0.96;
-      velocity.ty *= 0.96;
+      velocity.tx *= 0.96; velocity.ty *= 0.96;
       velocity.x += (velocity.tx - velocity.x) * 0.8;
       velocity.y += (velocity.ty - velocity.y) * 0.8;
 
@@ -236,15 +226,10 @@
         star.x += (star.x - width / 2) * velocity.z * star.z;
         star.y += (star.y - height / 2) * velocity.z * star.z;
         star.z += velocity.z;
-
         if (
-          star.x < -OVERFLOW_THRESHOLD ||
-          star.x > width + OVERFLOW_THRESHOLD ||
-          star.y < -OVERFLOW_THRESHOLD ||
-          star.y > height + OVERFLOW_THRESHOLD
-        ) {
-          recycleStar(star);
-        }
+          star.x < -OVERFLOW_THRESHOLD || star.x > width + OVERFLOW_THRESHOLD ||
+          star.y < -OVERFLOW_THRESHOLD || star.y > height + OVERFLOW_THRESHOLD
+        ) recycleStar(star);
       });
     }
 
@@ -257,9 +242,7 @@
         context.strokeStyle = STAR_COLOR;
         context.moveTo(star.x, star.y);
 
-        var tailX = velocity.x * 2,
-            tailY = velocity.y * 2;
-
+        let tailX = velocity.x * 2, tailY = velocity.y * 2;
         if (Math.abs(tailX) < 0.1) tailX = 0.5;
         if (Math.abs(tailY) < 0.1) tailY = 0.5;
 
@@ -270,13 +253,11 @@
 
     function movePointer(x, y) {
       if (typeof pointerX === 'number' && typeof pointerY === 'number') {
-        let ox = x - pointerX,
-            oy = y - pointerY;
+        let ox = x - pointerX, oy = y - pointerY;
         velocity.tx += (ox / 8 * scale) * (touchInput ? 1 : -1);
         velocity.ty += (oy / 8 * scale) * (touchInput ? 1 : -1);
       }
-      pointerX = x;
-      pointerY = y;
+      pointerX = x; pointerY = y;
     }
 
     function onMouseMove(event) {
@@ -291,8 +272,7 @@
     }
 
     function onMouseLeave() {
-      pointerX = null;
-      pointerY = null;
+      pointerX = null; pointerY = null;
     }
   </script>
 </body>
