Update navigation bar text in Dashboard.html

--- a/Dashboard.html
+++ b/Dashboard.html
@@ -137,11 +137,11 @@
 
   <!-- Navigation Bar -->
   <nav>
-    <div class="logo">WELCOME</div>
+    <div class="logo">INTERNSHIP FINDER</div>
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">InternshipFinder</a></li>
+      <li><a href="#">FindyourInternship</a></li>
       <li><a href="#">ResumeBuilder</a></li>
     </ul>
   </nav>
