--- a/Dashboard.html
+++ b/Dashboard.html
@@ -141,7 +141,7 @@
     <ul class="nav-links">
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a></li>
-      <li><a href="#">FindYourInternship</a></li>
+      <li><a href="#">Find_Your_Internship</a></li>
       <li><a href="#">ResumeBuilder</a></li>
     </ul>
   </nav>
